# ros-interview-task

./: .gitignore  CMakeLists.txt  README.md  package.xml
src/: publisher.cpp  runner.cpp  runner.h  runner_node.cpp
src/helper/: .runner.cpp.swp  .runner.h.swp  node.h  observer.cpp  observer.h  runner.cpp  runner.h
src/nodes/: .runner1.cpp.swp  observer.cpp  runner1.cpp  runner2.cpp  runner3.cpp  runner4.cpp  runner5.cpp
src/task/: CMakeLists.txt  package.xml
src/task/src/: subscriber.cpp
src/task/src/helper/: node.cpp  observer.cpp  runner.cpp  runner.h
src/task/src/nodes/: pathlength.py  runner1.cpp  runner4.cpp
